--- a/Makefile-C
+++ b/Makefile-C
@@ -1,47 +1,90 @@
 #AUTHOR : Eduard Frlička
-CFLAGS=-std=c11 -Wall -Wextra -pedantic -Wno-unused-parameter
 
+
+# =========================================================================
 # Names and Directories
+
+# Flags for compiling
+CFLAGS=-std=c++11 -Wall -Wextra -pedantic
+
+# Name of target binary file
 BINARY_NAME=binary
+
+# Name / Path to bin folder (for storing binary files)
 BIN=bin
-OBJ=$(BIN)/obj
+
+# Name / Path to folder, where .o files will be stored
+OBJ=obj
+
+# Name / Path to folder, where source files are (.h .c .cpp ...)
 SRC=src
 
-# compiler and rm command
+# Compiler
 CC=gcc
+
+# Suffix of files to compile (E.x.: c, cpp, c++)
+SUFFIX=c
+
+# rm command
 RM=rm -f
 
+
+# =========================================================================
 # initializing global variables
 BINARY_PATH=$(BIN)/$(BINARY_NAME)
-SRC_FILES=$(foreach DIR,$(SRC),$(wildcard $(DIR)/))
 
-vpath %.c $(foreach DIR,$(SRC_FILES),$(DIR):)
-vpath %.h $(foreach DIR,$(SRC_FILES),$(DIR):)
+SRC_DIRECTORIES=$(shell find $(SRC) -type d)
 
-SOURCES := $(foreach DIR,$(SRC_FILES),$(wildcard $(DIR)/*.c))
-SOURCES := $(notdir $(SOURCES))
-OBJECTS := $(patsubst %.c,$(OBJ)/%.o,$(SOURCES))
+vpath %.$(SUFFIX) $(SRC_DIRECTORIES)
+vpath %.h $(SRC_DIRECTORIES)
 
-HEADERS := $(foreach DIR,$(SRC_FILES),$(wildcard $(DIR)/*.h))
-HEADERS := $(notdir $(HEADERS))
+# Adding -I 
+CC:=$(CC) $(foreach DIR, $(SRC_DIRECTORIES),-I $(DIR))
 
+SOURCES := $(foreach DIR,$(SRC_DIRECTORIES),$(notdir $(wildcard $(DIR)/*.$(SUFFIX))))
+OBJECTS := $(patsubst %.$(SUFFIX),$(OBJ)/%.o,$(SOURCES))
+HEADERS := $(foreach DIR,$(SRC_DIRECTORIES),$(notdir $(wildcard $(DIR)/*.h)))
+
+
+# =========================================================================
 # Functions
-check_dir = @if [ ! -d $1 ]; then mkdir -p $1; fi # checks if dir exists, then creates whole path
 
-.PHONY:  all clean run
+# checks if dir exists, then creates whole path
+check_dir = @if [ ! -d $1 ]; then mkdir -p $1; echo "Created $1"; fi 
 
+
+# =========================================================================
+# Targets
+.PHONY:  all run clean cleanall source
+
+
+# =========================================================================
+# Rules
 all: $(BINARY_PATH) 
 
 run: $(BINARY_PATH) 
 	./$(BINARY_PATH)
 
 $(BINARY_PATH) : $(OBJECTS)
-	$(CC) $(OBJECTS) -o $@ $(CFLAGS)
-	ln -f $(BINARY_PATH) $(BINARY_NAME)
+	$(call check_dir,$(BIN))
+	$(CC)  $(OBJECTS) -o $@ $(CFLAGS)
 
-$(OBJ)/%.o: %.c $(HEADERS)
+$(OBJ)/%.o: %.$(SUFFIX) $(HEADERS)
 	$(call check_dir,$(OBJ))
-	$(CC) $< -c -o $@ $(CFLAGS)
+	$(CC)  $< -c -o $@ $(CFLAGS)
 
+
+source:
+	@echo "Sources: " $(SOURCES)
+	@echo "Objects: " $(OBJECTS)
+	@echo "Source_Folders: " $(SRC_DIRECTORIES)
+
+
+# =========================================================================
+# Cleaning rules
 clean:
 	$(RM) $(OBJ)/*.o
+
+cleanall:
+	$(RM) $(OBJ)/*.o
+	$(RM) $(BINARY_PATH)
